--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,6 @@
 {
   "presets": [
-    ["env", {
-      "modules": false
-    }],
-    "stage-0",
-    "react"
+    "@babel/preset-env",
+    "@babel/preset-react"
   ]
 }
