--- a/example/package.json
+++ b/example/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "file:../node_modules/react",
+    "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "^1.1.4",
     "react-tabletrim": "file:.."
   },
