--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "rollup -c -w",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "coverage": "open ./coverage/lcov-report/index.html"
   },
   "peerDependencies": {
     "classnames": "^2.2.6",
