--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.6.2",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
+    "react-markdown": "^4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^1.1.4",
     "react-tabletrim": "file:.."
