--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -28,13 +28,15 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: Build react-tabletrim
-      run: npm install
-      run: npm run build --if-present
+      run: |
+        npm install
+        npm run build --if-present
       
     - name: Build docs site
-      run: cd example
-      run: npm install
-      run: npm run build --if-present
+      run: |
+        cd example
+        npm install
+        npm run build --if-present
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
