change homepage path; update github workflow

--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-tabletrim-example",
-  "homepage": "https://ponysmith.github.io/react-tabletrim",
+  "homepage": ".",
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
