--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,12 +1,10 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: TableTrim CICD
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 jobs:
@@ -30,13 +28,13 @@ jobs:
     - name: Build react-tabletrim
       run: |
         npm install
-        npm run build --if-present
+        npm run build
       
     - name: Build docs site
       run: |
         cd example
         npm install
-        npm run build --if-present
+        npm run build
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -47,5 +45,5 @@ jobs:
     
     - name: Deploy docs site to S3
       run: |
-        aws s3 sync ./example s3://tabletrim.ponysmith.com    
+        aws s3 sync build s3://tabletrim.ponysmith.com --region us-west-1
       
