--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -45,5 +45,7 @@ jobs:
     
     - name: Deploy docs site to S3
       run: |
+        pwd
+        ls -lsa
         aws s3 sync build s3://tabletrim.ponysmith.com --region us-west-1
       
