--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "author": "ponysmith",
   "license": "MIT",
-  "repository": "ponysmith/react-tabletrim",
+  "repository": {
+    "type": "git",
+    "url":  "https://github.com/ponysmith/react-tabletrim"
+  },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
